@@ -5,23 +5,23 @@ AUX tracker-0.14.4-giflib5.patch 416 SHA256 e125e43dc6a9775aa23e61ef69e1a0764e67
 DIST tracker-0.14.4.tar.xz 5946796 SHA256 b818ee42b9007a94b2f8046edc4706bb2036187d5fd304e7ae23e5d2fcf85918 SHA512 e9d6d28276dc7f9930f0e8801fa3b3ea2a30ced0979309418ff5a36d7417ab85fb4d2c246032cad88ea63a4716b301db95a0046bd17eb1849e8a9a7edc464103 WHIRLPOOL 82aebbd0596c931867c65612672af52a510da202c881b2e1fdaa9a07136f8bef2840c2d0a6546ba0e6a53c9e61c973925dbc917ba5d8ec3b385f0656a34b926a
 DIST tracker-0.14.5.tar.xz 6065728 SHA256 cabef75eb18ad35208000dc472bdc20a74269799414527ee6e1c1c1cfb28eec8 SHA512 ab65d5618ef51d23b65e3d6972834e573415dba52e7bb9f20f8f9d4d4aab467b667301e6540083401d91c9e36cb63fdb2259f6dd9e975e9ff60bf1f83245b777 WHIRLPOOL 4c2c5ad9ff0d7a35c5e9c6bc42b354b9967a436cb1a8b2b640ca09e102a428e268bd011e0405a2b331f80df5a69dcd7e0afc693ae4969604ee41088e5da0c25b
 EBUILD tracker-0.14.4.ebuild 8965 SHA256 78f24476bbca6bf0aa41844b17c9f315be46efebb264f03c564ea8ec4878bfba SHA512 66adeee43c749b8d444e250e39d7da9a0dc992eb4379f21846d6ee1a7983916e636d771ae6d9550fa69dae8167b183b1dbd1d3dbae5b446f514809ee6c1a2481 WHIRLPOOL 7e079d141fc3ca30a6d6108a6918f6cfd9d6daa54862b9de45f9c17526dc1c8a0303e5f5cf2e4e4de675dc4b3a1c0f3d82b7d2fa04aa22ace142685352e28ca0
-EBUILD tracker-0.14.5.ebuild 9598 SHA256 9e908597231f579509ba693a70678895dcfa44e5734db67015152d97ef991d3d SHA512 1bf8e5b2f6ec17ad0c677854fed4eb041e4297008bdec78270685e7d9a1ebf77a983dc3f7d68d097960a14eaeaede01be4faf2d32f8b5c1763206bf31e131e98 WHIRLPOOL 92ee9ec4308fca761a8778d751b59e8159867a7703ca4c4950913bee1ca40ddf17d96b58b5ce3cd30492d8229b75d5d4590df6eff317aefa35bcf236993e7805
-MISC ChangeLog 27593 SHA256 f09946da2b660c4ee8e1be2ed8caf44f7ed589d2a516a55298841be830242470 SHA512 296f6db09a55a58c57ae545d963565ea81a3c8d72ce1718eec976224f9c4f103532690093714f62f845e181479f6c6e1716e4ccd5ec69b0fe0876684d8e2e2f3 WHIRLPOOL 837a599b6b55b540d5836b1b0aab011a97e4c3dc0f83a36d8924f40df8e30d86019899d7f5870430f8f62e26005e3f11cc314c81624ce77b8d96960eaff89d95
+EBUILD tracker-0.14.5.ebuild 9604 SHA256 ad33c11a4a91f44eb7277676d4e53d835907a6c06b418d26179771b9f3116206 SHA512 dde29aa4c07a53b74bfd3dc802c34e806f05a0f4956dfee6178a4869042677618205fac8cc763087e557ad749cd41b6dd60a4e062f98167494fb1e62cf43f494 WHIRLPOOL 576c5455e4fc5cbf25cc3530a89a4c931f31c385c22e8d724ab4761f319be286843f3957f54c922a84f0ad6dbb2b71c5ecd24668333fc7c384a8bfc222bb114a
+MISC ChangeLog 27757 SHA256 9e58d3a80f489348c5e8fb34d33a40a155382e23d740a0097a6c73d24487e862 SHA512 2db94ef428fa5b380bd1b3fbc3780069762aabe88d4994ace3f801759fe3cc9bb1174d94d0e2061a411e48b657de5435473d1ad1d8685b08719cc28a9e670866 WHIRLPOOL 7fb50ba7a08199b337716dedcf404576583e6d419efa52c4247c72bb2b998584a1d27607901d8a35465e53bdb80988df4ac2bceac18dacad7d7bf31e7a5210c1
 MISC metadata.xml 1515 SHA256 0e92e6ae499e7a108e3502636759466a6933d355eb224bf67e93d1f3db5e0b56 SHA512 4c1c33291265a4fcc34f91aee1bf63eb68ac56763e6fa6e978eca7129d7525f30f791f6c5a470789d2da15a4f6d204d4b1f63270e4d27b9fa2bef9cc9491d260 WHIRLPOOL a0fb4647784ff933bdc0ffc031e8e94aad4acc3dac5be45a7246d1aec45b2b1e5390ab2848e6c635071b1edbd17989bf60b944fefa39f258e88f200becd44b14
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRT9pyAAoJEDuWpXgki9wHiTUP/2b3K63qc6ayVyMiKc1DAyWG
-jNyVwY3AgM2iG8cF5gPBFSNrGeLOHA4OyJrEHW/BVdvPhEBXH9/56eEowJREXzrY
-pnvik7S0hwPONYt+iN77otQ/XrEo8y3/KS+r1VfabluIs0x7yZrm/o3L3MyYFfVm
-7M8ivGlY7SmzG3nD4vzMFV+/5M0zk79U9HT6N/WQb//wOQn6KarkZkcXRdJCf8yH
-h/3h2II8t0tGnEB4CwhnqKIH3qSOtBrc1E8jBw2HAySsXql5drHGNLUTg7GF0kA3
-/MTXo5k0q1Z5PCM2Gy/ampSabiTKMSXTGx3JGF7ogctL87gXdxdMl+yCWiHWcXv1
-PKG/GlxiDAaow+WbR5LkPNTTjeTkA6tUbnsORUPJ8J2GeQr8eJPBz+hF5qgIR/CY
-5M2P+EBX2LehkQEFqCH/WotD9aRRQ0cKUkNayWUMyCRM+kDif09EO8zcmrRI8d4w
-6Ceb67x8xhSRj2ScR0yNDuDmiU1Nq0+D8x6FYGt685TdYZdCKbrQSHJ+83f1M6I+
-IK6OKOeQqAd7EgVl6TSdrsdan1Fw2l8SCvzGuwTxavhuf+8Z5aMKSQkW/j7Td+/w
-96FCwdy3W65qTJ/aUmJONIuX5LFXWe1gR9HgSB8zcehU1aG4XbCtEaGJ1bx5vj9k
-OrceYMqJOX4B19eJdW5a
-=6iJT
+iQIcBAEBCAAGBQJRaDz3AAoJEDuWpXgki9wHU9MQAJNvIYqo+CkpAw7w4ZzbAdM6
+VNXD1HF7S4r7Td4QC7SqdXUbh65YTJ3eVurLMCOQkJxcuuo2UJJejmpfxMZUPoLr
+ij75fTsl04YjQPJmLPwjMnmLHQsaorTjYE/HB9z8IWFaC+n85+ng05UGR7/NRjPo
+mWop22LK9fb17hreBrsCwPLg/2FJPhHhOKiSSeKOvEcI+96TiMwsDK92vDCdurxC
+RqlcxjSitkcEIz3tahQBMLio1eeT/fTILDj7zCnRQ9yqwxpyfGph1Vmotgo/RyGb
++UlJ7t5vrT9VvLlLTu8SRLwKwmwiWV9yc6MEQx0QqMc/hMmSMM5byqxpsSPvkBm/
+DFZ5K8DfIcDUT/tsLvYARYjT31WwU7PKLxePu5geqIGFnLcLlKcDALMF8yyOSvrk
+qE9GN1C95OQdRYFvZ7BQrJBSqRU0KijIDv4VNOZcbeK6SWZatfdHdgqF4EaMv/t8
+S1yIsg53pCJsNnJ4iwq4/sr+rVQmHWp4vgVBpqG2wK0iXbEwL8L4kfZKoVRVZegF
+RBD1+/bRwR/+DoBTaRIDuIxPoffJRkyjzeRLfjvLoyU+pU1Tkd8l8aFPJ6BRG/yb
+6fFaW2uAVQbySTr3+wb44/jSFWKN/40zXyTYFyWMAaBfkR8qeyfW6K2aXu4hiv9M
+3NkgvfGASHGKw3xQ18VJ
+=6+sW
 -----END PGP SIGNATURE-----
