@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-misc/tracker/ChangeLog,v 1.144 2013/02/02 22:22:59 ago Exp $
 
+  28 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org> tracker-0.14.4.ebuild,
+  tracker-0.14.5.ebuild, tracker-9999.ebuild:
+  Adjust sqlite dependency, bug #462388
+
 *tracker-0.14.5 (21 Mar 2013)
 
   21 Mar 2013; Andrew John Hughes <andrew@gentoo.org> +tracker-0.14.4.ebuild,
